# pdf-outline-edit

./: .gitignore  BUG.md  README.md  TODO.md  pdfoe.pyproject  pyproject.toml
src/: run-gui-tk.py  run-gui.py
src/pdfoe/: common.py  gui_pyside_qml.py  main.py  main.qml  main_gui.py  pdf_obj.py
